Mise a jour du style sure certains points dans la page  A propos sur les list déroulantes

--- a/my-app-kasa/public/style.css
+++ b/my-app-kasa/public/style.css
@@ -134,6 +134,10 @@ p {
 }
 
 .Arrow {
+  transition: transform 0.3s ease;
   height: 12px;
   width: 23px;
+}
+.Arrow.expanded {
+  transform: rotate(180deg);
 }/*# sourceMappingURL=style.css.map */
