--- a/my-app-kasa/public/style.scss
+++ b/my-app-kasa/public/style.scss
@@ -124,6 +124,11 @@ p {
   color: #ff6060;
 }
 .Arrow {
+  transition: transform 0.3s ease;
   height: 12px;
   width: 23px;
+
+  &.expanded {
+    transform: rotate(180deg);
+  }
 }
