--- a/my-app-kasa/public/style.css
+++ b/my-app-kasa/public/style.css
@@ -59,11 +59,9 @@ a {
 /*Style articles */
 figure {
   display: flex;
-  background-color: #ff6060;
   width: 30%;
   margin: 0px;
   position: relative;
-  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
 }
 
@@ -71,6 +69,7 @@ figure img {
   width: 100%;
   height: auto;
   border-radius: 15px;
+  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
 }
 
 figcaption {
@@ -140,4 +139,24 @@ p {
 }
 .Arrow.expanded {
   transform: rotate(180deg);
+}
+
+/*404*/
+.error-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 1000px;
+}
+
+h2 {
+  color: #ff6060;
+  font-family: montserrat;
+}
+
+.Back-accueil {
+  color: #ff6060;
+  font-family: montserrat;
+  text-decoration: underline;
 }/*# sourceMappingURL=style.css.map */
