--- a/my-app-kasa/public/style.scss
+++ b/my-app-kasa/public/style.scss
@@ -55,11 +55,9 @@ a {
 
 figure {
   display: flex;
-  background-color: #ff6060;
   width: 30%;
   margin: 0px;
   position: relative;
-  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
 }
 
@@ -67,6 +65,7 @@ figure img {
   width: 100%;
   height: auto;
   border-radius: 15px;
+  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
 }
 figcaption {
   position: absolute;
@@ -131,4 +130,22 @@ p {
   &.expanded {
     transform: rotate(180deg);
   }
+}
+
+/*404*/
+.error-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 1000px;
+}
+h2 {
+  color: #ff6060;
+  font-family: montserrat;
+}
+.Back-accueil {
+  color: #ff6060;
+  font-family: montserrat;
+  text-decoration: underline;
 }
