--- a/my-app-kasa/public/style.css
+++ b/my-app-kasa/public/style.css
@@ -1,24 +1,44 @@
 @charset "UTF-8";
-/*style Banner */
+.img-banner-flex {
+  position: relative;
+  margin: 0px 25px 25px 25px;
+}
+
+.imgaccueilcontainner {
+  position: relative;
+}
+
+.banner-text {
+  position: absolute;
+  width: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: "montserrat";
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .Banner {
   color: #ff6060;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  margin: 0px 25px 25px 25px;
+  justify-content: space-between;
 }
 
 .nav {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  padding: 30px 25px 0px 0px;
+  padding: 29px 0px 0px 0px;
   gap: 35px;
   text-decoration: none;
-  font-family: montserrat;
+  font-family: "montserrat";
 }
-
-a {
+.nav a {
   color: #ff6060;
   text-decoration: none;
 }
@@ -30,7 +50,7 @@ a {
 #logokasa {
   width: 150px;
   height: 46px;
-  padding: 25px 0px 0px 50px;
+  padding: 25px 0px 0px 0px;
 }
 
 .logo {
@@ -40,37 +60,57 @@ a {
 
 .imgaccueilcontainner {
   width: 100%;
-  height: 250px;
+  height: 210px;
   overflow: hidden;
   position: relative;
   border-radius: 10px;
 }
-
-#imgaccueil {
+.imgaccueilcontainner #imgaccueil {
   width: 100%;
   border-radius: 10px;
-  height: 100%;
+  height: 210px;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
-  margin: 20px;
 }
 
-/*Style articles */
+.ArticleHotel {
+  margin: 0;
+  padding: 0;
+}
+
+.ArticleHotel figure {
+  margin: 0; /* Assurez-vous qu'il n'y a pas de marges intérieures dans la figure */
+}
+
+.ArticleHotel img {
+  display: block; /* Pour supprimer l'espace sous l'image */
+}
+
 figure {
   display: flex;
   width: 30%;
   margin: 0px;
   position: relative;
   border-radius: 15px;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
 figure img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 15px;
   box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
+}
+
+figure a {
+  margin: 0;
+  padding: 0;
+  display: block;
 }
 
 figcaption {
@@ -79,7 +119,7 @@ figcaption {
   bottom: 5px;
   left: 5px;
   color: white;
-  font-family: montserrat;
+  font-family: "montserrat";
   font-size: 15px;
 }
 
@@ -88,33 +128,36 @@ figcaption {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 15px;
-  padding: 20px;
-  margin: 10px;
+  gap: 20px;
+  padding: 50px 0px 50px 0px;
+  margin: 0px 25px 25px 25px;
   background-color: #f6f6f6;
   border-radius: 15px;
 }
 
-/*style footer*/
 footer {
   background-color: black;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
-
-p {
+footer p {
   color: white;
-  font-family: montserrat;
+  font-family: "montserrat";
+}
+footer .footer-containner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 40px;
 }
 
-/*Page A propos */
 .list {
   display: flex;
   justify-content: space-between;
   background-color: #ff6060;
   height: 25px;
-  font-family: montserrat;
+  font-family: "montserrat";
   color: white;
   padding: 12px;
   border-radius: 5px;
@@ -142,35 +185,53 @@ p {
   transform: rotate(180deg);
 }
 
-/*404*/
 .error-flex {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
-  height: 1000px;
+  justify-content: space-between;
+  height: 750px;
+  padding: 90px 0px 50px 0px;
 }
-
-h2 {
+.error-flex h2 {
   color: #ff6060;
-  font-family: montserrat;
+  font-family: "montserrat";
 }
-
-.Back-accueil {
+.error-flex .Back-accueil {
   color: #ff6060;
-  font-family: montserrat;
+  font-family: "montserrat";
   text-decoration: underline;
 }
 
-/* Article détails */
+span {
+  color: #ff6060;
+  font-family: "montserrat";
+}
+
+.error-logo {
+  width: 95%;
+  height: 100%;
+}
+
 .hotel-details {
-  height: 1100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.hotel-info {
+  height: auto;
   margin: 40px;
 }
 
 .main-info {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.main-info h2 {
+  color: #ff6060;
+  font-family: "montserrat";
 }
 
 .tags-flex ul {
@@ -202,7 +263,7 @@ h2 {
 }
 
 span {
-  font-family: montserrat;
+  font-family: "montserrat";
 }
 
 .content-list p ul {
@@ -216,16 +277,16 @@ span {
 
 .host-section {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  width: 14%;
+  width: 100%;
   gap: 2px;
   padding-left: 5px;
 }
 
 .host-section p {
   color: #ff6060;
-  font-family: montserrat;
+  font-family: "montserrat";
+  width: 50%;
 }
 
 .host-section img {
@@ -236,17 +297,162 @@ span {
 
 .info-pannel-flex {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .host-section-rating {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 20px;
+  gap: 15px;
+  padding-top: 20px;
 }
 
 .star {
   width: 26px;
+}
+
+.host-rating {
+  width: 100%;
+}
+
+/*gallery*/
+.img-gallery-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.img-gallery-container .img-gallery {
+  width: 100%;
+  height: 600px;
+  display: block;
+  margin: 0 auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.arrow-container {
+  width: 101%;
+  left: 2%;
+  position: absolute;
+  top: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.arrow-right {
+  width: 3vw;
+  height: auto;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transition: opacity 0.3s;
+  transform: translateY(-50%) rotate(0deg);
+  right: 5%;
+  z-index: 2;
+  opacity: 1;
+}
+
+.arrow-left {
+  width: 3vw;
+  height: auto;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) rotate(180deg);
+  transition: opacity 0.3s;
+  z-index: 2;
+  opacity: 1;
+}
+
+.image-counter {
+  display: block;
+}
+
+.arrow-container span {
+  position: absolute;
+  top: 243px;
+  left: 48%;
+  transform: translateX(-50%);
+  color: #fff;
+  font-family: "montserrat";
+}
+
+/* version mobile */
+@media only screen and (max-width: 480px) {
+  body {
+    font-size: 14px;
+  }
+  /*accueil*/
+  .hotel-contenair {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 0px;
+  }
+  figure {
+    width: 100%;
+  }
+  .imgaccueilcontainner {
+    height: 140px;
+  }
+  #logokasa {
+    width: 130px;
+    height: 41px;
+    padding: 24px 0px 0px 0px;
+  }
+  footer {
+    height: 400px;
+  }
+  footer .footer-containner {
+    padding-top: 150px;
+  }
+  /*Logement details*/
+  .img-gallery-container .img-gallery {
+    height: 341px;
+  }
+  .arrow-container span {
+    top: 140px;
+  }
+  .main-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .host-section-rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    padding-top: 20px;
+  }
+  .host-rating {
+    padding-top: 15px;
+  }
+  .host-section {
+    padding-right: 60px;
+    width: 19%;
+    gap: 13px;
+  }
+  .star {
+    width: 20px;
+  }
+  .Description-Equipement-flex {
+    display: flex;
+    flex-direction: column;
+  }
+  /*error page */
+  .error-flex {
+    height: 465px;
+  }
+  .error-flex h2 {
+    font-size: 15px;
+    white-space: pre-wrap;
+  }
+  .error-logo {
+    height: 60%;
+  }
 }/*# sourceMappingURL=style.css.map */
