--- a/my-app-kasa/public/style.scss
+++ b/my-app-kasa/public/style.scss
@@ -1,128 +1,194 @@
-/*style Banner */
+// Variables
+$primary-color: #ff6060;
+$background-color: #f6f6f6;
+$font-family: "montserrat";
 
-.Banner {
-  color: #ff6060;
+// Mixins
+@mixin flex-center {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+}
+
+// Styles
+
+// Banner
+.img-banner-flex {
+  position: relative;
+  margin: 0px 25px 25px 25px;
+}
+
+.imgaccueilcontainner {
+  position: relative;
+}
+
+.banner-text {
+  position: absolute;
+  width: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: $font-family;
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+}
+.Banner {
+  color: $primary-color;
+  @include flex-center;
+  margin: 0px 25px 25px 25px;
+  justify-content: space-between;
 }
 
 .nav {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  padding: 30px 25px 0px 0px;
-
+  padding: 29px 0px 0px 0px;
   gap: 35px;
   text-decoration: none;
-  font-family: montserrat;
+  font-family: $font-family;
+
+  a {
+    color: $primary-color;
+    text-decoration: none;
+  }
 }
-a {
-  color: #ff6060;
-  text-decoration: none;
-}
+
 .app {
   background-color: white;
 }
+
 #logokasa {
   width: 150px;
   height: 46px;
-  padding: 25px 0px 0px 50px;
+  padding: 25px 0px 0px 0px;
 }
+
 .logo {
   height: 100%;
   width: 50%;
 }
 
+// Image Accueil
 .imgaccueilcontainner {
   width: 100%;
-  height: 250px;
+  height: 210px;
   overflow: hidden;
   position: relative;
   border-radius: 10px;
+
+  #imgaccueil {
+    width: 100%;
+    border-radius: 10px;
+    height: 210px;
+    object-fit: cover;
+    object-position: center;
+  }
 }
 
-#imgaccueil {
-  width: 100%;
-  border-radius: 10px;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-  margin: 20px;
+// Styles des articles
+.ArticleHotel {
+  margin: 0;
+  padding: 0;
 }
-/*Style articles */
+.ArticleHotel figure {
+  margin: 0; /* Assurez-vous qu'il n'y a pas de marges intérieures dans la figure */
+}
 
+.ArticleHotel img {
+  display: block; /* Pour supprimer l'espace sous l'image */
+}
 figure {
   display: flex;
   width: 30%;
   margin: 0px;
   position: relative;
   border-radius: 15px;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
 figure img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
   border-radius: 15px;
   box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
 }
+figure a {
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
 figcaption {
   position: absolute;
   width: 50%;
   bottom: 5px;
   left: 5px;
   color: white;
-  font-family: montserrat;
+  font-family: $font-family;
   font-size: 15px;
 }
+
 .hotel-contenair {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 15px;
-  padding: 20px;
-  margin: 10px;
-  background-color: #f6f6f6;
+  gap: 20px;
+  padding: 50px 0px 50px 0px;
+  margin: 0px 25px 25px 25px;
+  background-color: $background-color;
   border-radius: 15px;
 }
-/*style footer*/
+
+// Footer
 footer {
   background-color: black;
   display: flex;
   align-items: center;
   flex-direction: column;
+
+  p {
+    color: white;
+    font-family: $font-family;
+  }
+
+  .footer-containner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 40px;
+  }
 }
 
-p {
-  color: white;
-  font-family: montserrat;
-}
-
-/*Page A propos */
-
+// Page A propos
 .list {
   display: flex;
   justify-content: space-between;
-  background-color: #ff6060;
+  background-color: $primary-color;
   height: 25px;
-  font-family: montserrat;
+  font-family: $font-family;
   color: white;
   padding: 12px;
   border-radius: 5px;
   cursor: pointer;
 }
+
 .group-list {
   display: flex;
   flex-direction: column;
   padding: 10%;
   gap: 10px;
 }
+
 .content-list p {
-  background-color: #f6f6f6;
-  color: #ff6060;
+  background-color: $background-color;
+  color: $primary-color;
 }
+
 .Arrow {
   transition: transform 0.3s ease;
   height: 12px;
@@ -133,42 +199,66 @@ p {
   }
 }
 
-/*404*/
+// 404
 .error-flex {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex-center;
   flex-direction: column;
-  height: 1000px;
+  justify-content: space-between;
+  height: 750px;
+  padding: 90px 0px 50px 0px;
+
+  h2 {
+    color: $primary-color;
+    font-family: $font-family;
+  }
+
+  .Back-accueil {
+    color: $primary-color;
+    font-family: $font-family;
+    text-decoration: underline;
+  }
 }
-h2 {
-  color: #ff6060;
-  font-family: montserrat;
+span {
+  color: $primary-color;
+  font-family: $font-family;
 }
-.Back-accueil {
-  color: #ff6060;
-  font-family: montserrat;
-  text-decoration: underline;
+.error-logo {
+  width: 95%;
+  height: 100%;
 }
 
-/* Article détails */
+// Article détails
+
 .hotel-details {
-  height: 1100px;
-  margin: 40px;
-}
-.main-info {
   display: flex;
   flex-direction: column;
 }
+
+.hotel-info {
+  height: auto;
+  margin: 40px;
+}
+
+.main-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  h2 {
+    color: $primary-color;
+    font-family: $font-family;
+  }
+}
+
 .tags-flex ul {
   display: flex;
   flex-direction: row;
   list-style-type: none;
   gap: 10px;
 }
+
 .tags-flex ul li {
   float: left;
-  background-color: #ff6060;
+  background-color: $primary-color;
   color: white;
   border-radius: 5px;
   height: 19px;
@@ -176,52 +266,202 @@ h2 {
   padding: 5px;
   list-style-type: none;
 }
+
 .dropdown-description {
   width: 100%;
 }
+
 .Description-Equipement-flex {
   display: flex;
   flex-direction: row;
   gap: 15px;
 }
+
 span {
-  font-family: montserrat;
+  font-family: $font-family;
 }
+
 .content-list p ul {
   list-style-type: none;
 }
+
 .tags-flex {
   display: flex;
   margin-left: -40px;
 }
+
 .host-section {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  width: 14%;
+  width: 100%;
   gap: 2px;
   padding-left: 5px;
 }
+
 .host-section p {
-  color: #ff6060;
-  font-family: montserrat;
+  color: $primary-color;
+  font-family: $font-family;
+  width: 50%;
 }
+
 .host-section img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
 }
+
 .info-pannel-flex {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
 }
+
 .host-section-rating {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 20px;
+  gap: 15px;
+  padding-top: 20px;
 }
+
 .star {
   width: 26px;
+}
+.host-rating {
+  width: 100%;
+}
+
+/*gallery*/
+.img-gallery-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 20px;
+  .img-gallery {
+    width: 100%;
+    height: 600px;
+    display: block;
+    margin: 0 auto;
+    object-fit: cover;
+  }
+}
+.arrow-container {
+  width: 101%;
+  left: 2%;
+  position: absolute;
+  top: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.arrow-right {
+  width: 3vw;
+  height: auto;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transition: opacity 0.3s;
+  transform: translateY(-50%) rotate(0deg);
+  right: 5%;
+  z-index: 2;
+  opacity: 1;
+}
+.arrow-left {
+  width: 3vw;
+  height: auto;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) rotate(180deg);
+  transition: opacity 0.3s;
+  z-index: 2;
+  opacity: 1;
+}
+
+.image-counter {
+  display: block;
+}
+.arrow-container span {
+  position: absolute;
+  top: 243px;
+  left: 48%;
+  transform: translateX(-50%);
+  color: #fff;
+  font-family: $font-family;
+}
+
+/* version mobile */
+@media only screen and (max-width: 480px) {
+  body {
+    font-size: 14px;
+  }
+  /*accueil*/
+  .hotel-contenair {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 0px;
+  }
+  figure {
+    width: 100%;
+  }
+  .imgaccueilcontainner {
+    height: 140px;
+  }
+  #logokasa {
+    width: 130px;
+    height: 41px;
+    padding: 24px 0px 0px 0px;
+  }
+  footer {
+    height: 400px;
+  }
+  footer .footer-containner {
+    padding-top: 150px;
+  }
+  /*Logement details*/
+  .img-gallery-container .img-gallery {
+    height: 341px;
+  }
+  .arrow-container span {
+    top: 140px;
+  }
+  .main-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .host-section-rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    padding-top: 20px;
+  }
+  .host-rating {
+    padding-top: 15px;
+  }
+  .host-section {
+    padding-right: 60px;
+    width: 19%;
+    gap: 13px;
+  }
+  .star {
+    width: 20px;
+  }
+  .Description-Equipement-flex {
+    display: flex;
+    flex-direction: column;
+  }
+  /*error page */
+  .error-flex {
+    height: 465px;
+  }
+  .error-flex h2 {
+    font-size: 15px;
+    white-space: pre-wrap;
+  }
+  .error-logo {
+    height: 60%;
+  }
 }
