--- a/my-app-kasa/public/style.css
+++ b/my-app-kasa/public/style.css
@@ -34,13 +34,17 @@
   display: flex;
   justify-content: space-between;
   padding: 29px 0px 0px 0px;
-  gap: 35px;
   text-decoration: none;
+  gap: 35px;
   font-family: "montserrat";
 }
 .nav a {
   color: #ff6060;
   text-decoration: none;
+}
+.nav a.active {
+  text-decoration: underline;
+  color: #ff6060;
 }
 
 .app {
@@ -174,6 +178,7 @@ footer .footer-containner {
 .content-list p {
   background-color: #f6f6f6;
   color: #ff6060;
+  font-family: "montserrat";
 }
 
 .Arrow {
@@ -382,7 +387,7 @@ span {
 }
 
 /* version mobile */
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
   body {
     font-size: 14px;
   }
