--- a/my-app-kasa/public/style.css
+++ b/my-app-kasa/public/style.css
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0px 25px 25px 25px;
+  margin: 0px 45px 30px 45px;
   justify-content: space-between;
 }
 
@@ -95,6 +95,7 @@
 figure {
   display: flex;
   width: 30%;
+  height: 100%;
   margin: 0px;
   position: relative;
   border-radius: 15px;
@@ -104,7 +105,7 @@ figure {
 
 figure img {
   width: 100%;
-  height: 100%;
+  height: 435px;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 15px;
@@ -119,7 +120,7 @@ figure a {
 
 figcaption {
   position: absolute;
-  width: 50%;
+  width: 100%;
   bottom: 5px;
   left: 5px;
   color: white;
@@ -132,7 +133,7 @@ figcaption {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 22px;
   padding: 50px 0px 50px 0px;
   margin: 0px 25px 25px 25px;
   background-color: #f6f6f6;
@@ -175,10 +176,16 @@ footer .footer-containner {
   gap: 10px;
 }
 
-.content-list p {
+.content-list {
   background-color: #f6f6f6;
   color: #ff6060;
   font-family: "montserrat";
+  padding: 5px;
+}
+
+.content-list ul {
+  list-style-type: none;
+  padding: 0px;
 }
 
 .Arrow {
@@ -273,6 +280,7 @@ span {
 
 .content-list p ul {
   list-style-type: none;
+  padding: 6px;
 }
 
 .tags-flex {
@@ -401,6 +409,11 @@ span {
   }
   figure {
     width: 100%;
+    height: 399px;
+  }
+  figure img {
+    width: 100%;
+    height: 100%;
   }
   .imgaccueilcontainner {
     height: 140px;
