--- a/my-app-kasa/public/style.scss
+++ b/my-app-kasa/public/style.scss
@@ -37,7 +37,7 @@ $font-family: "montserrat";
 .Banner {
   color: $primary-color;
   @include flex-center;
-  margin: 0px 25px 25px 25px;
+  margin: 0px 45px 30px 45px;
   justify-content: space-between;
 }
 
@@ -107,6 +107,7 @@ $font-family: "montserrat";
 figure {
   display: flex;
   width: 30%;
+  height: 100%;
   margin: 0px;
   position: relative;
   border-radius: 15px;
@@ -116,7 +117,7 @@ figure {
 
 figure img {
   width: 100%;
-  height: 100%;
+  height: 435px;
   object-fit: cover;
   border-radius: 15px;
   box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
@@ -129,7 +130,7 @@ figure a {
 
 figcaption {
   position: absolute;
-  width: 50%;
+  width: 100%;
   bottom: 5px;
   left: 5px;
   color: white;
@@ -142,7 +143,7 @@ figcaption {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 22px;
   padding: 50px 0px 50px 0px;
   margin: 0px 25px 25px 25px;
   background-color: $background-color;
@@ -188,11 +189,15 @@ footer {
   padding: 10%;
   gap: 10px;
 }
-
-.content-list p {
+.content-list {
   background-color: $background-color;
   color: $primary-color;
   font-family: $font-family;
+  padding: 5px;
+}
+.content-list ul {
+  list-style-type: none;
+  padding: 0px;
 }
 
 .Arrow {
@@ -289,6 +294,7 @@ span {
 
 .content-list p ul {
   list-style-type: none;
+  padding: 6px;
 }
 
 .tags-flex {
@@ -411,6 +417,11 @@ span {
   }
   figure {
     width: 100%;
+    height: 399px;
+  }
+  figure img {
+    width: 100%;
+    height: 100%;
   }
   .imgaccueilcontainner {
     height: 140px;
